tempfile/derive_more/tests/compile_fail/debug/extra_placeholder.rs
#[derive(derive_more::Debug)]
pub struct Foo {
    #[debug("Stuff({}): {}", bar)]
    bar: String,
}

fn main() {}
